--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartbrain",
-  "homepage": "https://jh318.github.io/smartbrain",
+  "homepage": "https://jh318.github.io/SmartBrain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
