--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^6.1.1",
+    "particles-bg": "^2.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-tilt": "^1.0.2",
-    "react-tsparticles": "^2.12.2",
     "tachyons": "^4.12.0",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
